# marbles

./: .env.template  .gitignore  Cargo.toml  config.toml  enable_hooks.sh  get_youtube_token.py  index.html  refresh_instagram_access_token.sh  requirements.txt  tailwind.css  youtube_authenticator.py  youtube_uploader.py
.github/workflows/: deploy.yml
.sqlx/: query-0fa23ee7a6c77dfdc56783d0dc268cc64946499a394988410e3d5fc44472a7f4.json  query-158abc1ed94ab9be79ee2fa08facf8f7947375ceb802a499d32e3210ca528921.json  query-15acf1efcfc360413dfbed3608247e33b1c8fa95b6ceceee46682a1cc9d6846e.json  query-1736f1b66bfaf7c731eb52423cb2196b71a367e2b8a629aae36ba079c6e264c9.json  query-33bd3c23aa990edfc79861020b2d1f86e822b611e0070786d18f40b8a6747d9a.json  query-42fc50bdbbde2be3f9f52674c23a0f1782071bb57869f53441a170750761a6ce.json  query-588edb1efc82bd8da5c5ef3fb587e60895c39cface7e2d193bcc3cd8d0d9359d.json  query-62a4104a26693e17d3f9cff3a01e1c2784710c9c4d5e716d1f24e15a0a3e0ad0.json  query-676237e077cae3af0840579c43c8910b9fc5bf85e3346eaea7690f7f8de65ca1.json  query-87c34affbf49fc8940ccacc2365cd2fc938d7ca8f74edca4315d05291e32da6b.json  query-9196e6dd5352a26f0c457c43fff6cd861f11c1eaf84ae8138a3a012a4186ec98.json  query-9cb399be698b24bb91b26726976573db5cad879b9c0277265b46634783bfcba8.json  query-ad4e8c0fc10e22b5ecf27ed522ece68d52fc0ad957f9c458c78415b210086204.json  query-b9ec2211672bc544b95281318be44056c7e74dc07c5914d9fbbfd46b3e1cffb9.json  query-c0a664bdf597655748de0de4e91856fc2c57dbc7b59b581e6ba8802431958f97.json  query-c6fd001247a7d00ff678efaf200f373293cedc44182733e05af9f7c743b6ab3d.json  query-cc1fd8b8838f143e32c473b7c15d39792c68d704c3cd6efbe612c4fa0cf5e91a.json  query-d50f428bd2583102642933b5c4ca1d0287a02782ece54eb09fb3b39a8faa8435.json  query-fc7d9718c89d7acc1ad3c07bfbed33a26a2ae164561eb5a4b7a33de0a7fdfe4f.json
api/: Cargo.toml
api/src/: lib.rs  marble.rs  race.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: marbles.rs  mod.rs  register.rs  token.rs
database/: Cargo.toml
database/src/: lib.rs  marble.rs  race.rs  race_marble.rs  user.rs
frontend/: Cargo.toml
frontend/src/: main.rs  util.rs
frontend/src/components/: marble_card.rs  mod.rs
frontend/src/components/nav/: mod.rs  navbar.rs  navlink.rs
frontend/src/pages/: login.rs  logout.rs  marble.rs  register.rs  root.rs
hooks/: pre-push
lib/: Cargo.toml
lib/src/: api.rs  collision.rs  engagement.rs  graphic.rs  level.rs  levels.rs  lib.rs  main.rs  scene.rs  scenes.rs  simulation.rs  username.rs  util.rs
lib/src/ball/: mod.rs
lib/src/database/: marble.rs  mod.rs  race.rs  race_participant.rs
lib/src/drawer/: base_drawer.rs  base_style.rs  glow_style.rs  ikea_style.rs  image_style.rs  mod.rs  outline_drawer.rs  outline_style.rs  tail_style.rs
lib/src/graphic/: countdown.rs  engagement.rs  marble_stat.rs  mod.rs  special_message.rs
lib/src/particle/: emitter.rs  mod.rs  system.rs
lib/src/posting/: cloudinary.rs  instagram.rs  mod.rs  youtube.rs
lib/src/powerup/: change_density.rs  change_elasticity.rs  change_position.rs  mod.rs  special.rs
lib/src/rendering/: image.rs  macroquad.rs  mod.rs
lib/src/wall/: circle_wall.rs  mod.rs  straight_wall.rs
marbles_headless/: Cargo.toml
marbles_headless/src/: main.rs
marbles_macroquad/: Cargo.toml
marbles_macroquad/src/: main.rs  util.rs
migrations/: 20260409123042_race.down.sql  20260409123042_race.up.sql  20260413143434_marble.down.sql  20260413143434_marble.up.sql  20260414135257_race_marble.down.sql  20260414135257_race_marble.up.sql  20260414140527_race_level.down.sql  20260414140527_race_level.up.sql  20260423192910_league.down.sql  20260423192910_league.up.sql  20260424140439_race_time.down.sql  20260424140439_race_time.up.sql
render_scenes/: Cargo.toml
render_scenes/src/: main.rs
src/: ball.rs  cloudinary.rs  instagram.rs  main.rs  scene.rs  scenes.rs  util.rs  wall.rs  youtube.rs
src/ball/: base_ball.rs  mod.rs  tracked_ball.rs
src/drawer/: base_drawer.rs  glow_drawer.rs  mod.rs  tail_drawer.rs
src/particle/: emitter.rs  mod.rs  system.rs
src/posting/: instagram.rs
src/wall/: circle_wall.rs  mod.rs  straight_wall.rs
