[workspace]
resolver = "3"
members = ["api", "backend", "database", "frontend", "lib", "marbles_headless", "render_scenes"]

[workspace.dependencies]
ab_glyph = { version = "0.2.31" }
anchor2d = "0.1.12"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.45", features = ["derive"] }
dotenvy = "0.15.7"
glam = { version = "0.32.1", features = ["mint"] }
image = { version = "0.25.10" }
jwt = "0.16.0"
keyframe = "1.1.1"
macroquad = { version = "0.4.14", features = ["audio", "glam-serde"] }
mint = "0.5.9"
palette = { version = "0.7.6", features = ["serializing"] }
particula-rs = { git = "https://github.com/JMANN240/particula-rs" }
rand = { version = "0.10.1", features = ["sys_rng"] }
render-agnostic = { version = "0.1.19", default-features = false }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"