[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
hmac = "0.12.1"
jwt = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.9"
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
