[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { workspace = true, optional = true }
anchor2d = { workspace = true }
api = { path = "../api" }
chrono = { workspace = true }
dyn-clone = "1.0.20"
even-odd-traits = "1.0.0"
glam = { workspace = true }
hex = "0.4.3"
hound = "3.5.1"
image = { workspace = true, optional = true }
imageproc = { version = "0.25.0", optional = true }
itertools = "0.14.0"
keyframe = { workspace = true }
macroquad = { workspace = true, optional = true }
mint = { workspace = true }
palette = { workspace = true }
particula-rs = { workspace = true }
rand = { workspace = true }
render-agnostic = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
tracing = { workspace = true }

[features]
default = ["macroquad"]
macroquad = ["dep:macroquad"]
image = ["dep:image", "dep:imageproc", "dep:ab_glyph"]
