[package]
name = "marbles-headless"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { version = "0.2.31" }
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
dotenvy = "0.15.7"
glam = { workspace = true }
hex = "0.4.3"
hound = "3.5.1"
image = { workspace = true }
itertools = "0.14.0"
lib = { path = "../lib" }
particula-rs = { git = "https://github.com/JMANN240/particula-rs" }
rand = "0.9.1"
rayon = "1.10.0"
render-agnostic = { workspace = true, features = ["image"] }
reqwest = { version = "0.12.22", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1 = "0.10.6"
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
