[package]
name = "marbles-headless"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { workspace = true }
api = { path = "../api" }
chrono = { workspace = true }
clap = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
lib = { path = "../lib" }
particula-rs = { git = "https://github.com/JMANN240/particula-rs" }
rand = { workspace = true }
rayon = "1.10.0"
render-agnostic = { workspace = true, features = ["image"] }
reqwest = { workspace = true, features = ["blocking", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
textwrap = "0.16.2"
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
