[package]
name = "marbles-macroquad"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor2d = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
glam = { workspace = true }
lib = { path = "../lib" }
macroquad = { workspace = true }
palette = { workspace = true }
particula-rs = { git = "https://github.com/JMANN240/particula-rs" }
rand = { workspace = true }
render-agnostic = { workspace = true, features = ["macroquad"] }
reqwest = { workspace = true, features = ["blocking", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
