[package]
name = "render-scenes"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { workspace = true }
api = { path = "../api" }
chrono = { workspace = true }
database = { path = "../database" }
dotenvy = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
lib = { path = "../lib" }
particula-rs = { git = "https://github.com/JMANN240/particula-rs" }
rand = { workspace = true }
render-agnostic = { workspace = true, features = ["image"] }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
